Fix spacing around zipper for different placement settings

--- a/src/index.scss
+++ b/src/index.scss
@@ -383,7 +383,7 @@ small, .text-small {
   margin-bottom: -1.5em;
   margin-right: calc(50% + 2.5em);
   text-align: right;
-  transform: translateY(-2em);
+  transform: translateY(-1.575em - 0.5em); // line height minus margin bottom
   font-weight: normal;
 }
 .current-and-upcoming-phrases {
